squashing bugs

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,3 +12,19 @@ body {
 html {
   scroll-behavior: smooth;
 }
+
+/* Custom Scrollbar */
+::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d2b48c; /* tan */
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #a38f79; /* beige */
+}
+
